# gst-sh-mobile

./: AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac  gstshvideodec.c  gstshvideodec.h  gstshvideoenc.c  gstshvideoenc.h
common/: Makefile
common/m4/: Makefile
debian/: README.Debian  changelog  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  gst-sh-mobile.default.ex  gst-sh-mobile.doc-base.EX  init.d.ex  init.d.lsb.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
m4/: Makefile
vidix/: sh_veu_vid.c
